crates/cli/tests/snapshots/run_test__dependencies__can_run_deps_in_serial.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ depsB:standard (no op)
▪▪▪▪ depsC:standard (no op)
▪▪▪▪ depsA:standard (no op)
▪▪▪▪ dependsOn:serialDeps (no op)

Tasks: 4 completed
 Time: 100ms ❯❯❯❯ to the moon
