crates/cli/tests/snapshots/run_test__dependencies__changes_primary_hash_if_deps_hash_changes.snap
---
source: crates/cli/tests/run_test.rs
expression: "[h1, h2, extract_hash_from_run(sandbox.path(), \"outputs:asDep\"),\nextract_hash_from_run(sandbox.path(), \"outputs:withDeps\")]"
---
[
    "9066a6263adebc52fc42fe472f0c022f8ae3d55ea4f06455eb25ee821d71e135",
    "f74d32727539c3b507ad230bf0c208b6ed0721fa7edf8057e057b8beba2ed863",
    "2b35d3bea9462ec4cb9d60d018619ff2de3352998362a45ab71606d5380a8799",
    "9a0b08d307375f978c3794624d8151fc07846324770e9fd35335457caa604a95",
]
