crates/cli/tests/snapshots/run_test__dependencies__generates_unique_hashes_for_each_target.snap
---
source: crates/cli/tests/run_test.rs
expression: "[extract_hash_from_run(sandbox.path(), \"outputs:asDep\"),\nextract_hash_from_run(sandbox.path(), \"outputs:withDeps\")]"
---
[
    "81670f2e4bc28898288815ee075a8653bb264bf8dcf7fa0246f87e50054c950f",
    "1034518a27b7197ff81b5393a98270ca94283e26cdaf61ec370ccbcd5f92112c",
]
