crates/cli/tests/snapshots/run_test__dependencies__runs_the_graph_in_order_not_from_head.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ depsC:dependencyOrder (no op)
▪▪▪▪ depsB:dependencyOrder (no op)

Tasks: 2 completed
 Time: 100ms ❯❯❯❯ to the moon
